WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
169979
Ranges for variation font properties are not enforced
https://bugs.webkit.org/show_bug.cgi?id=169979
Summary
Ranges for variation font properties are not enforced
Myles C. Maxfield
Reported
2017-03-22 17:02:41 PDT
We should test the computed style, CSSStyleDeclaration, and reftest the bounds for font-weight, font-stretch, and font-style.
Attachments
WIP
(10.78 KB, patch)
2017-03-25 15:06 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Patch
(40.58 KB, patch)
2017-03-27 18:53 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews100 for mac-elcapitan
(1.01 MB, application/zip)
2017-03-27 20:03 PDT
,
Build Bot
no flags
Details
Patch
(45.18 KB, patch)
2017-03-27 20:25 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Patch
(45.18 KB, patch)
2017-03-28 15:21 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Show Obsolete
(4)
View All
Add attachment
proposed patch, testcase, etc.
Myles C. Maxfield
Comment 1
2017-03-23 13:22:12 PDT
In our code we also check if the ranges are ascending, which IIRC is not in the spec.
Myles C. Maxfield
Comment 2
2017-03-25 15:06:37 PDT
Created
attachment 305402
[details]
WIP
Myles C. Maxfield
Comment 3
2017-03-27 18:53:20 PDT
Created
attachment 305539
[details]
Patch
Build Bot
Comment 4
2017-03-27 20:03:17 PDT
Comment on
attachment 305539
[details]
Patch
Attachment 305539
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.webkit.org/results/3421419
New failing tests: fast/text/font-selection-font-face-parse.html
Build Bot
Comment 5
2017-03-27 20:03:19 PDT
Created
attachment 305546
[details]
Archive of layout-test-results from ews100 for mac-elcapitan The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews100 Port: mac-elcapitan Platform: Mac OS X 10.11.6
Myles C. Maxfield
Comment 6
2017-03-27 20:25:17 PDT
Created
attachment 305553
[details]
Patch
Myles C. Maxfield
Comment 7
2017-03-28 00:38:12 PDT
Comment on
attachment 305553
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=305553&action=review
> Source/WebCore/ChangeLog:10 > + - Font stretch values less than or equal to 0 are parse errors
Whoops, I meant 0%.
> Source/WebCore/ChangeLog:11 > + - Font style values less than or equal to -20deg or greater than or equal to 20deg are parse errors
Whoops, I meant -90deg and 90deg.
Myles C. Maxfield
Comment 8
2017-03-28 15:21:17 PDT
Created
attachment 305650
[details]
Patch
Dave Hyatt
Comment 9
2017-03-28 16:19:58 PDT
Comment on
attachment 305650
[details]
Patch r=me
WebKit Commit Bot
Comment 10
2017-03-28 16:53:32 PDT
Comment on
attachment 305650
[details]
Patch Clearing flags on attachment: 305650 Committed
r214507
: <
http://trac.webkit.org/changeset/214507
>
WebKit Commit Bot
Comment 11
2017-03-28 16:53:37 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug